**v0.5.0**
1. Added base support for Pydal tables definition

**v0.4.0**
1. return tuples (multiple values) is parsed correctly now
2. symbols like `*&^%$#!±~`§<>` now does not cause any errors
3. classes without any args does not cause an error anymore

**v0.3.0**
1. Added cli - `pmp` command with args -d, --dump  
2. Added support for simple Django ORM models
3. Added base support for pure Python Classes

**v0.2.0**
1. Added support for Dataclasses
2. Added parse_from_file method
3. Added correct work with types with comma inside, like: Union[dict, list] or Union[dict, list, tuple, anything] 

**v0.1.1**
1. Added base parser logic & tests for Pydantic, Enums, SQLAlchemy Models, GinoORM models, TortoiseORM models 