@@ -15,9 +15,10 @@ grammar = Grammar(
     string = one_quote_str / double_quotes_str
     one_quote_str = ~"\'[^\']+\'"i
     double_quotes_str = ~'"[^\"]+"'i
+    list = "[" (call_result / attr_def / args / id / text)* ","* "]"
     funct_def = intend? "def" id args? ":"* ws?
     args_in_brackets = "[" ((id/string)* ","* )* "]"
-    args        = "(" (( call_result / args / attr_def / id  )* ","* )* ")"
+    args        = "(" (( list / call_result / args  / attr_def / id  )* ","* )* ")"
     call_result = id args ws?
     class_name  = "class" id
     id          = (((dot_id / text)+ ) *  / dot_id / text) ws?
